# python-documenter

./: .gitignore  LICENSE  README.md  manifest.in  pyproject.toml  run.py  t.py  tox.ini
python_documenter/: _model.py  _output.py  explain.py  program_trace.py
python_documenter/prompts/: explain_code.md
